# seller-library

./: .gitignore  BUILD_DEPLOY.md  IMPLEMENTATION.md  PROJECT.md  README.md  build.sh  bump.sh  deploy.sh  index.html  latest.json  package-lock.json  package.json  start-vite.js
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: create_ico.py  create_icon.sh  generate_icon.py  icon.icns
src-tauri/migrations/: 001_init.sql  002_add_categories.sql  003_add_platform_api_fields.sql  004_add_folders_table.sql  005_add_settings_table.sql  006_add_text_files_table.sql  007_add_main_photo_field.sql
src-tauri/src/: db.rs  main.rs  models.rs  updater.rs
src-tauri/src/commands/: mod.rs
src/api/: index.js  objects.js  photos.js  platforms.js  settings.js  textFiles.js
src/components/: Categories.jsx  ConfirmModal.jsx  CreateObjectForm.jsx  CreateObjectModal.jsx  CreatePlatformForm.jsx  Documentation.jsx  MoveToFolderModal.jsx  ObjectCard.jsx  ObjectDetail.jsx  ObjectList.jsx  PhotoDetail.jsx  PhotoEditor.jsx  PhotoGrid.jsx  PhotoImport.jsx  PhotoManager.jsx  PhotoSelector.jsx  PhotoTreeView.jsx  PlatformCard.jsx  PlatformDetail.jsx  PlatformList.jsx  Sales.jsx  Sidebar.jsx  SlidePanel.jsx  Stepper.jsx  TextFileEdit.jsx  UpdateModal.jsx  UserSettings.jsx  WelcomeModal.jsx
src/contexts/: LanguageContext.jsx
src/locales/: en.json  fr.json
src/utils/: api.js
