[package]
name = "seller-library"
version = "0.1.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-asset", "shell-open", "dialog-all", "fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
image = "0.24"
base64 = "0.21"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json"] }
semver = "1.0"
flate2 = "1.0"
tar = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
